--- a/src/MLBlazorRCL/Texts/AboutMiracleList.razor
+++ b/src/MLBlazorRCL/Texts/AboutMiracleList.razor
@@ -13,8 +13,9 @@
 
  Es gibt vier auf ASP.NET Core Blazor basierende Implementierung des MiracleList-Frontends:
 <ul>
- <li><b>MiracleList_BW</b>: MiracleList mit Blazor WebAssembly (3-Tier mit Zugriff auf die Daten über WebAPI-basierten Application Server)</li>
  <li><b>MiracleList_BS</b>: MiracleList mit Blazor Server (2-Tier mit Direktzugriff auf die Datenbank)</li>
+ <li><b>MiracleList_BW</b>: MiracleList mit Blazor WebAssembly (3-Tier mit Zugriff auf die Daten über WebAPI-basierten Application Server)</li>
+ <li><b>MiracleList_BU</b>: MiracleList mit "Blazor United" d.h. Auto-Rendering-Modus mit Umschalten von Blazor Server zu Blazor WebAssembly  (3-Tier mit Zugriff auf die Daten über WebAPI-basierten Application Server)</li>
  <li><b>MiracleList_BD</b>: MiracleList mit Blazor Desktop in einer WPF-Rahmenanwendung (2-Tier mit Direktzugriff auf die Datenbank)</li>
  <li><b>MiracleList_BM</b>: MiracleList mit Blazor MAUI (3-Tier mit Zugriff auf die Daten über WebAPI-basierten Application Server)</li>
 </ul>
@@ -64,7 +65,7 @@
  <li>Backend .NET Core: <a href="https://github.com/HSchwichtenberg/MiracleListBackend">https://github.com/HSchwichtenberg/MiracleListBackend</a></li>
  <li>Frontend TypeScript/Angular: <a href="https://github.com/HSchwichtenberg/MiracleListAngular">https://github.com/HSchwichtenberg/MiracleListAngular</a></li>
  <li>Frontend TypeScript/Vue.js: <a href="https://github.com/HSchwichtenberg/MiracleListVue">https://github.com/HSchwichtenberg/MiracleListVue</a></li>
- <li>Frontend C#/Blazor: <a href="http://leanpub.com/blazor60" rel="nofollow">http://leanpub.com/blazor60 (in den Downloads zu diesem Buch)</a></li>
+ <li>Frontend C#/Blazor: <a href="https://www.IT-Visions.de/BlazorBuch" rel="nofollow">https://www.IT-Visions.de/BlazorBuch (in den Downloads zu diesem Buch)</a></li>
 </ul>
 
 <h2>Weitere Informationen</h2>
