--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -55,9 +55,8 @@
 </a>
 
 <div>
-
  <text>MiracleList v</text>@System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
  läuft mit @Util.GetBlazorVersionInfo()
 </div>
 
-<a href="/about">Mehr Systeminformationen</a>
+<a href="/About/AboutMiracleList">Weitere Informationen über MiracleList</a> | <a href="/about">Mehr Systeminformationen</a>
