--- a/src/MLBlazorRCL/Login/ServerState.razor
+++ b/src/MLBlazorRCL/Login/ServerState.razor
@@ -1,6 +1,6 @@
 ﻿@using MiracleList;
  <div>
-  Status: @foreach (var be in BackendStatusList)
+  Server-Status: @foreach (var be in BackendStatusList)
   {
    <span class="badge" style="
   margin-bottom: 3px;
