Cleanup: Überflüssige Dateien aus dem Template entfernt

--- a/src/MiracleList_BU/Components/App.razor
+++ b/src/MiracleList_BU/Components/App.razor
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Components.Web
+@using Web.Client.Components
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
