--- a/src/ITVisions.Blazor/Controls/Upload.razor
+++ b/src/ITVisions.Blazor/Controls/Upload.razor
@@ -10,15 +10,15 @@
   @Headline &nbsp;
   @if (MaxFileSize > 0)
   {
-   <span class="ZusatzInfoSmall">max @FileUtil.GetMB(MaxFileSize) pro Datei</span>
+   <span class="NoteSmall">max @FileUtil.GetMB(MaxFileSize) pro Datei</span>
   }
   @if (MaxFileSize > 0 && !String.IsNullOrEmpty(AcceptableFileTypes))
   {
-   <span class="ZusatzInfoSmall"> | </span>
+   <span class="NoteSmall"> | </span>
   }
   @if (!String.IsNullOrEmpty(AcceptableFileTypes))
   {
-   <span class="ZusatzInfoSmall" style='color: @(this.notAllowedFiles>0 ? "red" : "")'>Erlaubte Dateitypen: @AcceptableFileTypes</span>
+   <span class="NoteSmall" style='color: @(this.notAllowedFiles>0 ? "red" : "")'>Erlaubte Dateitypen: @AcceptableFileTypes</span>
   }
  </h3>
 
@@ -136,7 +136,6 @@
 
  CancellationTokenSource cancelation = new CancellationTokenSource();
 
-
  async Task OnInputFileChange(InputFileChangeEventArgs e)
  {
   filesToUpload = new List<IBrowserFile>();
@@ -226,28 +225,6 @@
    string newFilePath = System.IO.Path.Combine(Path, newName);
    FileUtil.GetOrCreateDir(new System.IO.FileInfo(newFilePath));
    if (File.Exists(newFilePath)) File.Delete(newFilePath);
-
-   //var stream = file.OpenReadStream();
-   // System.NotSupportedException:
-
-   // Uncaught (in promise) Error: System.IO.IOException: Supplied file with size 544650 bytes exceeds the maximum of 512000 bytes.
-   //var outputStream = File.Create(path);
-   ////stream.Seek(0, SeekOrigin.Begin);
-   //stream.CopyTo(outputStream);
-   //outputStream.Close();
-
-   #region Upload ohne Fortschrittsanzeige
-   //displayProgress = true;
-   // await InvokeAsync(StateHasChanged);
-   //using var stream = f.OpenReadStream(MAXFILESIZE); // 50 MB
-   //var outputStream = File.OpenWrite(newFilePath);
-   ////stream.Seek(0, SeekOrigin.Begin); // Seek: Specified method is not supported. at Microsoft.AspNetCore.Components.Forms.BrowserFileStream.Seek
-   //await stream.CopyToAsync(outputStream); // CopyTo(): Error: System.NotSupportedException: Synchronous reads are not supported.
-   //outputStream.Close();
-   //Info = "Hochladen der Datei <b>" + f.Name + "</b>: " + "beendet!";
-   //displayProgress = false;
-   // await InvokeAsync(StateHasChanged);
-   #endregion
 
    #region Upload mit Fortschrittsanzeige
    await UploadFile(f, newFilePath);
