Multi-Threading im BW-Projekt

--- a/src/MiracleList_BW/Samples_BW/SQLite/SQLiteLocalData.razor
+++ b/src/MiracleList_BW/Samples_BW/SQLite/SQLiteLocalData.razor
@@ -1,4 +1,4 @@
-﻿@page "/Samples_BW/SQLite"
+﻿@* @page "/Samples_BW/SQLite"
 @page "/Samples_BW/SQLiteLocalData"
 @using Microsoft.EntityFrameworkCore
 
@@ -39,4 +39,4 @@ Datenbank-Verbindungszeichenfolge: @DBInfo
  {
   <li>#@p.ID: @p.DateTime Benutzer "@p.Text"</li>
  }
-</ul>
+</ul> *@
