--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Login"
 @page "/Logout"
 @page "/"
+@using System.Runtime.InteropServices
 @inherits LoginModel
 
 <div class="panel panel-primary">
@@ -56,7 +57,7 @@
 
 <div>
  <text>MiracleList v</text>@System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString()
- läuft mit @Util.GetBlazorVersionInfo()
+ läuft mit @Util.GetBlazorVersionInfo() @@ @System.Environment.MachineName / @RuntimeInformation.ProcessArchitecture
 </div>
 
 <a href="/About/AboutMiracleList">Weitere Informationen über MiracleList</a> | <a href="/about">Mehr Systeminformationen</a>
