--- a/src/MLBlazorRCL/Login/Login.razor
+++ b/src/MLBlazorRCL/Login/Login.razor
@@ -51,8 +51,8 @@
  </div>
 </div>
 
-<a href="https://www.IT-Visions.de">
- <img align="right" width="200" src="/_content/MLBlazorRCL/img/www.IT-Visions.de_Logo.jpg" />
+<a href="https://www.IT-Visions.de" title="Link zu Homepage der Firma www.IT-Visions.de">
+ <img align="right" width="200" src="/_content/MLBlazorRCL/img/www.IT-Visions.de_Logo.jpg" alt="Logo www.IT-Visions.de" />
 </a>
 
 <div>
