+Quardratwurzelbeispiel wie in meinen Beispielsammlungen zu Svelte und vue.js

--- a/src/SamplesRCL/ThemenübergreifendeBeispiele/Index.razor
+++ b/src/SamplesRCL/ThemenübergreifendeBeispiele/Index.razor
@@ -6,4 +6,6 @@
 
 <p>Dies ist ein Beispiel, das aus Svelte nach Blazor portiert wurde. Daher die zum Teil abweichenden Namenskonventionen!</p>
 
+<div>
 <QuadratwurzelRechner x="40"></QuadratwurzelRechner>
+</div>
