--- a/src/SamplesRCL/ThemenübergreifendeBeispiele/QuadratwurzelRechner.razor
+++ b/src/SamplesRCL/ThemenübergreifendeBeispiele/QuadratwurzelRechner.razor
@@ -32,7 +32,7 @@
  // Benutzerereignis 2: Merken
  void save()
  {
-  all.Add(x, Math.Round(result,2));
+  all[x] = Math.Round(result,2);
  }
 
  // Benutzerereignis 3: Nächsten Wert merken
@@ -41,6 +41,13 @@
   x++;
   newNumber();
   save();
+ }
+
+ // Lebenszyklusereignis
+ protected override void OnInitialized()
+ {
+  Util.Log(name + ": OnInitialized!");
+  author += " " + DateTime.Now.Year;
  }
 
 }
@@ -54,13 +61,14 @@
  </div>
  <h2>@headline</h2>
  <h4>@((MarkupString) author)</h4>
+ <br />
  <div>
   Zahl:
-  <input type="number" @bind="x" @bind:after="newNumber" class="form-control" />
+  <input type="number" @bind="x" @bind:after="newNumber"  />
   Quadratwurzel:
-  <b>@Math.Round(result,2)</b>
-  <button class="btn btn-default" @onclick=save title="Merkt das Ergebnis">Merken</button>
-  <button class="btn btn-default"  @onclick=increment title="Nächster Wert: @(x + 1)"> Nächsten Wert merken </button>
+  <b>@($"{result:#.00}")</b>
+  <button @onclick=save title="Merkt das Ergebnis">Merken</button>
+  <button @onclick=increment title="Nächster Wert: @(x + 1)"> Nächsten Wert merken </button>
   <hr />
   @if (all.Count > 0)
   {
@@ -76,7 +84,7 @@
   }
   @foreach (var entry in all)
    {
-    <li class="@(entry.Key % 2 == 0 ? "even" : "odd" )" title=@("Eintrag #" + (index+1))>@entry.Key = @entry.Value</li>
+    <li class="@(entry.Key % 2 == 0 ? "even" : "odd" )" title=@("Eintrag #" + (index+1))>@entry.Key = @($"{entry.Value:#.00}")</li>
    }
   </ul>
  </div>
@@ -120,4 +128,25 @@
   width: 100px;
   height: 30px;
  }
+
+ button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: white;
+  cursor: pointer;
+  transition: border-color 0.25s;
+ }
+
+  button:hover {
+   border-color: #646cff;
+  }
+
+  button:focus,
+  button:focus-visible {
+   outline: 4px auto -webkit-focus-ring-color;
+  }
 </style>
