--- a/src/SamplesRCL/ThemenübergreifendeBeispiele/Index.razor
+++ b/src/SamplesRCL/ThemenübergreifendeBeispiele/Index.razor
@@ -7,5 +7,7 @@
 <p>Dies ist ein Beispiel, das aus Svelte nach Blazor portiert wurde. Daher die zum Teil abweichenden Namenskonventionen!</p>
 
 <div>
+
+ <!-- Einbettung einer Kompontente in eine andere Komponente -->
  <QuadratwurzelRechner x="40" newResult='(tupel)=>Util.Log(tupel.x + " ->" + tupel.result)'></QuadratwurzelRechner>
 </div>
