--- a/src/SamplesRCL/SamplesList.razor
+++ b/src/SamplesRCL/SamplesList.razor
@@ -194,11 +194,9 @@
     </ul>
    </Text>
   </Card3>
-
-
  </div>
 
- <div class="col-xs-6">
+ <div class="col-xs-6"> @* Spalte 2 *@
 
   <Card3>
    <Header>Kapitelübergreifende Beispiele</Header>
@@ -206,6 +204,7 @@
     <ul>
      <li><a href="/main">MiracleList</a></li>
      <li><a href="/Samples/QuadratwurzelRechner">Quadratwurzel-Rechner</a> (wird als prägnantes, aber vielschichtiges Beispiel zum Vergleich mit anderen Webframeworks verwendet; bisher nicht im Buch beschrieben)</li>
+     <li><a href="/Samples/ThemenübergreifendeBeispiele/QuadratwurzelRechnerImHost">Quadratwurzel-Rechner in Host-Komponente</a></li>
     </ul>
    </Text>
   </Card3>
